--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1", 
+    "lint": "eslint index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "eslint": "^5.8.0",
     "express": "^4.16.4"
   }
 }
