--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/debug-agent": "^3.0.0",
+    "@google-cloud/profiler": "^0.2.2",
     "eslint": "^5.8.0",
     "express": "^4.16.4"
   }
